--- a/AITPMobileApp/AITPMobileApp/Base.lproj/Main.storyboard
+++ b/AITPMobileApp/AITPMobileApp/Base.lproj/Main.storyboard
@@ -94,11 +94,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="bz2-jH-13W">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="detailDisclosureButton" indentationWidth="10" textLabel="7Tm-DF-eZD" style="IBUITableViewCellStyleDefault" id="bz2-jH-13W">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bz2-jH-13W" id="pmF-RP-KbW">
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7Tm-DF-eZD">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="5nW-i9-gGO" kind="show" id="EMr-Uw-Ysm"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -119,6 +130,33 @@
                 <exit id="kOj-4L-lXx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1166" y="1406"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Pui-pK-a4a">
+            <objects>
+                <viewController id="5nW-i9-gGO" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2WQ-h8-2WK"/>
+                        <viewControllerLayoutGuide type="bottom" id="6La-SP-qbB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QCO-Fl-rGD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems>
+                        <barButtonItem title="Back" id="T4j-zI-xwA">
+                            <connections>
+                                <segue destination="fus-pB-u8S" kind="unwind" unwindAction="unwindToViewController:" id="bka-oH-L4q"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eod-VH-K8p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="fus-pB-u8S" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1831" y="1406"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IYG-9o-Z9g">
